# good-rust-server-arch-transaction-service

./: .env.sample  .gitignore  Cargo.toml  DESIGN.md  Dockerfile  README.md  demo_webhooks.sh  docker-compose.test.yml  docker-compose.yml  observe.sh  run_monitoring.sh  test_all_webhooks.sh  test_traces_direct.sh  validate_all.sh
.github/workflows/: ci.yml
exchange-rates/: Cargo.toml
exchange-rates/src/: lib.rs
observability/: otel-collector-config.yaml  prometheus.yml
payments-app/: Cargo.toml
payments-app/examples/: client_example.rs
payments-app/src/: config.rs  main.rs
payments-cli/: Cargo.toml
payments-cli/src/: main.rs
payments-client/: Cargo.toml
payments-client/src/: lib.rs
payments-hex/: Cargo.toml
payments-hex/src/: lib.rs  openapi.rs  service.rs  service_tests.rs
payments-hex/src/inbound/: auth.rs  handlers.rs  mod.rs  rate_limit.rs  server.rs
payments-hex/tests/: rate_limit_integration.rs
payments-repo/: Cargo.toml
payments-repo/migrations/: 0001_create_tables.sql  0001_create_tables_pg.sql  0002_create_webhook_events.sql  0002_create_webhook_events_pg.sql  0003_create_api_keys.sql  0003_create_api_keys_pg.sql  0004_create_webhook_endpoints_pg.sql  0004_create_webhook_endpoints_sqlite.sql
payments-repo/src/: lib.rs  postgres.rs  security.rs  sqlite.rs  sqlite_tests.rs  types.rs  webhooks.rs
payments-types/: Cargo.toml
payments-types/src/: dto.rs  error.rs  lib.rs
payments-types/src/domain/: account.rs  api_key.rs  mod.rs  money.rs  transaction.rs  webhook.rs
payments-types/src/ports/: exchange.rs  mod.rs  repository.rs
scripts/common/: lib.sh  run_chaos_tests.sh  run_cli_tests.sh  run_e2e_tests.sh
scripts/postgres/: chaos_test.sh  test_cli.sh  test_e2e.sh
scripts/sqlite/: chaos_test.sh  test_cli.sh  test_e2e.sh
