[workspace]
resolver = "2"
members = [
    "payments-types",
    "payments-hex",
    "payments-repo",
    "payments-app",
    "payments-client",
    "payments-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "uuid", "chrono", "json"] }

# Web framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
dotenvy = "0.15"
async-trait = "0.1"

# Security
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
subtle = "2"

# Concurrent collections
dashmap = "6"

# Random generation
rand = "0.9"

# Rate limiting
governor = "0.10"


