[package]
name = "payments-app"
version.workspace = true
edition.workspace = true
description = "Binary application wiring for the payments service"

[[bin]]
name = "payments-server"
path = "src/main.rs"

[[example]]
name = "client_example"
required-features = ["sqlite"]

[features]
default = ["postgres"]
postgres = ["payments-repo/postgres", "sqlx/postgres"]
sqlite = ["payments-repo/sqlite", "sqlx/sqlite"]

[dependencies]
payments-types = { path = "../payments-types" }
payments-hex = { path = "../payments-hex" }
payments-repo = { path = "../payments-repo" }

# Async
tokio = { workspace = true }

# Database
sqlx = { workspace = true, optional = true }

# Config
dotenvy = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = "0.28.0"
opentelemetry_sdk = { version = "0.28.0", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.28.0", features = ["grpc-tonic", "http-proto", "reqwest-client", "metrics"] }
tracing-opentelemetry = "0.29.0"
axum-otel-metrics = "0.12.0"

[dev-dependencies]
payments-client = { path = "../payments-client" }
tempfile = "3"
axum = { workspace = true }
