[package]
name = "payments-client"
version.workspace = true
edition.workspace = true
description = "HTTP client SDK for the payments API"

[dependencies]
payments-types = { path = "../payments-types" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
