[package]
name = "payments-hex"
version.workspace = true
edition.workspace = true
description = "Application service and HTTP adapter for the payments service"

[features]
default = []
sqlite = ["payments-repo/sqlite"]
postgres = ["payments-repo/postgres"]

[dependencies]
payments-types = { path = "../payments-types" }
payments-repo = { path = "../payments-repo" }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

# Rate limiting
governor = { workspace = true }
dashmap = { workspace = true }

# HTTP Client for Webhooks
reqwest = { workspace = true, features = ["json"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
http-body-util = "0.1"
