[package]
name = "payments-hex"
version.workspace = true
edition.workspace = true
description = "Application service and HTTP adapter for the payments service"

[features]
default = []
sqlite = ["payments-repo/sqlite"]
postgres = ["payments-repo/postgres"]

[dependencies]
payments-types = { path = "../payments-types" }
payments-repo = { path = "../payments-repo" }
exchange-rates = { path = "../exchange-rates" }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
tracing = "0.1"
anyhow = { workspace = true }

# Rate limiting
governor = { workspace = true }
dashmap = { workspace = true }

# HTTP Client for Webhooks
reqwest = { workspace = true, features = ["json"] }

# OpenAPI Documentation
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
http-body-util = "0.1"
