[package]
name = "payments-repo"
version.workspace = true
edition.workspace = true
description = "Repository adapters (Postgres, SQLite) for the payments service"

[features]
default = []
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]

[dependencies]
payments-types = { path = "../payments-types" }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Database
sqlx = { workspace = true, optional = true }
dashmap = { workspace = true, optional = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }

# Security
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
subtle = { workspace = true }
