[package]
name = "payments-types"
version.workspace = true
edition.workspace = true
description = "Domain types and port traits for the payments service"

[dependencies]
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
utoipa = { version = "5.4.0", features = ["uuid", "chrono"] }
exchange-rates = { path = "../exchange-rates" }

